# Signal-Validation-Model

./: README.md  pyproject.toml  run_real_pipeline.sh
data/processed/: README.md  wr_feature_seasons.csv  wr_outcome_seasons.csv  wr_player_seasons.csv  wr_player_weeks.csv
data/raw/: README.md  player_weekly_history.csv
docs/: BACKTEST_PROTOCOL.md  BREAKOUT_LABELS.md  CANONICAL_TABLES.md  CASE_STUDIES.md  COHORT_BASELINES.md  DATA_CONTRACT.md  EXPORTS.md  FEATURE_SCHEMA.md  LABEL_ENGINE.md  MODEL_SCOPE.md  PUBLIC_FINDINGS.md  PUBLIC_REPORTS.md  REAL_DATA_INGESTION.md  RECIPE_COMPARISON.md  ROLE_ENRICHMENT.md  SIGNAL_SCORE.md  TIBER_DATA_ADAPTER.md
outputs/candidate_rankings/: wr_2024_features_for_2025_outcomes_scaffold.csv  wr_candidate_rankings_balanced_conservative.csv  wr_candidate_rankings_baseline_v1.csv  wr_candidate_rankings_cohort_balanced.csv  wr_candidate_rankings_cohort_upside.csv  wr_candidate_rankings_efficiency_heavy.csv  wr_candidate_rankings_role_balanced.csv  wr_candidate_rankings_role_upside.csv  (+11 more)
scripts/: build_real_wr_data.py
signal_validation_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  cli.py
tests/: test_labels.py  test_pipeline.py  test_real_wr_data_contract.py  test_schemas.py  test_scoring.py  test_tiber_data_adapter.py  test_wr_breakouts.py  test_wr_case_study.py  test_wr_cohort_baselines.py  test_wr_exports.py  test_wr_ingestion.py  test_wr_public_findings.py  test_wr_public_reports.py  test_wr_recipe_comparison.py  test_wr_role_opportunity.py  test_wr_signal_score.py
(+81 files in other folders)
