[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-validation-model"
version = "0.1.0"
description = "Historical signal validation scaffold for fantasy football breakout research."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10.0",
]

[project.scripts]
signal-validation = "src.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
